<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_activity_text_padding"
    android:background="@color/main_activity_purple_background"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/button_main_activity_set_parking"
        style="@style/button_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_activity_text_view_margin_top"
        android:text="@string/text_button_main_activity_set_parking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_main_activity"/>

    <Button
        android:id="@+id/button_main_activity_reservation"
        style="@style/button_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_text_view_margin"
        android:text="@string/text_button_main_activity_reservation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_main_activity"
        app:layout_constraintBottom_toTopOf="@id/text_view_reservation_activity"/>

    <TextView
        android:id="@+id/text_view_main_activity"
        style="@style/text_view_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_activity_text_view_margin_top"
        android:text="@string/text_view_main_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_view_reservation_activity"
        style="@style/text_view_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_activity_text_view_margin_top"
        android:text="@string/text_view_reservation_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_activity_reservation" />

</androidx.constraintlayout.widget.ConstraintLayout>
